// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submissions reducers tests suite submissions/dismiss-item remove item from incomingItems 1`] = `
Object {
  "incomingItems": Array [],
  "likedItems": Array [],
}
`;

exports[`submissions reducers tests suite submissions/dismiss-item remove item from likedItems 1`] = `
Object {
  "incomingItems": Array [
    Object {
      "data": Object {
        "name": "anotherDummy",
      },
      "id": "2",
    },
  ],
  "likedItems": Array [],
}
`;

exports[`submissions reducers tests suite submissions/fetch-liked-items-success should not omit locally liked items that are not included in server response 1`] = `
Object {
  "incomingItems": Array [],
  "likedItems": Array [
    Object {
      "data": Object {
        "name": "dummy",
      },
      "id": "1",
    },
    Object {
      "data": Object {
        "name": "anotherDummy",
      },
      "id": "2",
    },
  ],
}
`;

exports[`submissions reducers tests suite submissions/fetch-liked-items-success should set fetched liked items 1`] = `
Object {
  "incomingItems": Array [],
  "likedItems": Array [
    Object {
      "data": Object {
        "name": "dummy",
      },
      "id": "1",
    },
    Object {
      "data": Object {
        "name": "anotherDummy",
      },
      "id": "2",
    },
  ],
}
`;

exports[`submissions reducers tests suite submissions/like-item add item to likedItems 1`] = `
Object {
  "incomingItems": Array [],
  "likedItems": Array [
    Object {
      "data": Object {
        "name": "dummy",
      },
      "id": "1",
    },
  ],
}
`;

exports[`submissions reducers tests suite submissions/like-item remove item from from incomingItems 1`] = `
Object {
  "incomingItems": Array [],
  "likedItems": Array [
    Object {
      "data": Object {
        "name": "dummy",
      },
      "id": "1",
    },
  ],
}
`;

exports[`submissions reducers tests suite submissions/receive-incoming-item append incoming item to the list 1`] = `
Object {
  "incomingItems": Array [
    Object {
      "data": Object {
        "name": "anotherDummy",
      },
      "id": "2",
    },
    Object {
      "data": Object {
        "name": "dummy",
      },
      "id": "1",
    },
  ],
  "likedItems": Array [],
}
`;
